# MosaiqJob

./: .gitignore  ARCHITECTURE.md  PIPELINE.md  README.md  app.py  gdrive_auth.py  pyproject.toml  test_jd.txt  test_template.py
agents/: analyst.py  coach.py  enrich.py  llm.py  log.py  mcp_tools.py  profiler.py  qa.py  reviewer.py  source.py  strategist.py  writer.py
assets/: registry.json
docs/: MCP_SETUP.md
mcp_servers/: base.py  gdrive_server.py  github_server.py  notion_server.py  onedrive_server.py
models/: schemas.py
output_example/: 이력서.html  자소서.html  포트폴리오.html
prompts/: analyst.md  analyst_v2.md  coach.md  profiler.md  reviewer.md  source.md  source_full.md  strategist.md  writer_cover.md  writer_cover_v2.md  writer_portfolio.md  writer_portfolio_v2.md  writer_resume.md  writer_resume_v2.md
renderer/: pdf.py
templates/: cover_letter.html  portfolio.html  resume.html
templates/styles/: common.css  theme.css
test_jd/: test_jd_clobot.txt  test_jd_rainbow.txt  test_jd_werobotics.txt
tests/: conftest.py
tests/e2e/: test_app.py
tests/integration/: test_agents.py  test_mcp_integration.py  test_pipeline.py
tests/unit/: test_llm.py  test_mcp_tools.py  test_pdf.py  test_schemas.py
